@@ -414,6 +414,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #7133: SSL objects now support the new buffer API.
+
 - Issue #7149: urllib fails on OSX in the proxy detection code
 
 - Issue #7069: Make inspect.isabstract() return a boolean.
